--- a/includes/template.yaml
+++ b/includes/template.yaml
@@ -272,7 +272,7 @@
       
 - trigger:
   - platform: time_pattern
-    minutes: "/5"
+    hours: "/1"
   action:
     - service: weather.get_forecasts
       data:
